# MindMend

./: .env.config  .env.production  .env.template  .gitconfig  .gitignore  .htaccess  .pre-comit-config.yaml  .replit  .wget-hsts  .zynaddsubfx-bank-cache.xml  ACCOUNTS.md  ADMIN_CREDENTIALS.txt  ADMIN_PANEL_FIXES_REPORT.md  ADMIN_PANEL_FIX_REPORT.md  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  AGENTS.md  API_KEY_SETUP_GUIDE.md  ARCHITECTURE.md  AUSTRALIAN_EMERGENCY_NUMBERS_UPDATE.md  CLAUDE.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PACKAGE.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_SUCCESS_REPORT.md  DEPLOYMENT_TEST.txt  DEPLOYMENT_VERIFICATION_REPORT.md  Dockerfile  ENDPOINT_ISSUES_FOUND.md  ENDPOINT_TESTING_PLAN.md  ENDPOINT_TESTING_RESULTS.md  MANUAL_DEPLOYMENT_INSTRUCTIONS.md  MENTAL_HEALTH_ENHANCEMENT_ROADMAP.md  PRODUCTION_DEPLOYMENT_STATUS.md  PROFESSIONAL_PORTAL_COMPLETE.md  QUICK_DEPLOY.md  QUICK_DEPLOYMENT_COMMANDS.md  README.md  ROUTES.md  (+150 more)
.ollama/: history
admin/: __init__.py  ai_management.py  api_management.py  auth.py  auth_fixed.py  compliance.py  dashboard.py  finance.py  marketing.py  subscriptions.py  system.py  users.py
app/: build.gradle
attached_assets/: 230913chatbot_interview_guide_v3_1754071330332.docx  Pasted-You-are-Replit-s-AI-agent-Create-a-full-Flask-web-app-called-Mind-Mend-with-the-following-PR-1754035373883_1754035373883.txt
backup/: app.py  config.py  counselor_dashboard.py  create_admin_manual.py  deployment_config.py  deployment_guide.md  deployment_requirements.txt  media_pack.py  replit.md  (+4 more)
(+331 files in other folders)
