[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.98.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.42",
    "flask-cors>=6.0.1",
    "paypalrestsdk>=1.13.3",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.5",
    "stripe>=12.4.0",
    "reportlab>=4.4.3",
]
